--- a/JWDataTrackerWeb/src/app/pages/dashboard/dashboard.component.html
+++ b/JWDataTrackerWeb/src/app/pages/dashboard/dashboard.component.html
@@ -3,16 +3,16 @@
         <div class="col-12 p-2 mb-2">
             <app-mid-week-schedule-panel></app-mid-week-schedule-panel>
         </div>
-        <div class="col-12 col-lg-6 mb-2">
+        <div class="col-12 col-lg-6 mb-2 d-none">
             <app-weekend-meeting-schedule-panel></app-weekend-meeting-schedule-panel>
         </div>
-        <div class="col-12 col-lg-6 mb-2">
+        <div class="col-12 col-lg-6 mb-2 d-none">
             <app-congregation-stats></app-congregation-stats>
         </div>
-        <div class="col-12 col-lg-6 mb-2">
+        <div class="col-12 col-lg-6 mb-2 d-none">
             <app-publisher-analysis-panel></app-publisher-analysis-panel>
         </div>
-        <div class="col-12 col-lg-6 mb-2">
+        <div class="col-12 col-lg-6 mb-2 d-none">
             <app-meeting-attendance-summary-panel></app-meeting-attendance-summary-panel>
         </div>
     </div>
