--- a/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.html
+++ b/JWDataTrackerWeb/src/app/shared/components/nav-menu/nav-menu.component.html
@@ -13,8 +13,8 @@
                             <a [routerLink]="['/dashboard']" [routerLinkActive]="['link-active']">Dashboard</a>
                             <a [routerLink]="['/midweekmeeting']" [routerLinkActive]="['link-active']">Meetings</a>
                             <a [routerLink]="['/publishers']" [routerLinkActive]="['link-active']">Publishers</a>
-                            <a [routerLink]="['/servicereport']" [routerLinkActive]="['link-active']">Reports</a>
-                            <a [routerLink]="['/users']" [routerLinkActive]="['link-active']">Users</a>
+                            <a class="d-none" [routerLink]="['/servicereport']" [routerLinkActive]="['link-active']">Reports</a>
+                            <a class="d-none" [routerLink]="['/users']" [routerLinkActive]="['link-active']">Users</a>
                             <div class="menu-user">
                                 <a [routerLink]="['/users']" [routerLinkActive]="['link-active']">{{fullname}}</a>
                                 <button class="btn btn-default" (click)="logout()">Logout</button>
@@ -46,8 +46,8 @@
                     <a class="my-2" [routerLink]="['/dashboard']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Dashboard</a>
                     <a class="my-2" [routerLink]="['/midweekmeeting']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Meetings</a>
                     <a class="my-2" [routerLink]="['/publishers']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Publishers</a>
-                    <a class="my-2" [routerLink]="['/servicereport']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Reports</a>
-                    <a class="my-2" [routerLink]="['/users']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Users</a>
+                    <a class="d-none my-2" [routerLink]="['/servicereport']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Reports</a>
+                    <a class="d-none my-2" [routerLink]="['/users']" [routerLinkActive]="['link-active']" (click)="showMenu = false">Users</a>
                     <hr style="width:100%;"/>
                     <a class="my-2" [routerLink]="['/users']" [routerLinkActive]="['link-active']">{{fullname}}</a>
                     <button class="btn btn-default my-2" (click)="logout();">Logout</button>
