--- a/JWDataTrackerWeb/src/app/pages/dashboard/mid-week-schedule-panel/mid-week-schedule-panel.component.html
+++ b/JWDataTrackerWeb/src/app/pages/dashboard/mid-week-schedule-panel/mid-week-schedule-panel.component.html
@@ -5,11 +5,11 @@
                 <h3 class="m-0 p-0">Mid Week Meeting Schedule</h3>
                 <label>
                     <i class='bx bx-calendar' ></i>
-                    Friday, June 17, 2022
+                    {{currentMidWeekSchedule.scheduledDate | date}}
                 </label>
             </div>
             <div class="col-2 d-flex align-items-center justify-content-end">
-                <button class="btn btn-default">
+                <button class="btn btn-default" (click)="openMidWeekModal()">
                     <i class='bx bx-edit' ></i>
                 </button>
             </div>
@@ -18,121 +18,35 @@
     <div class="card-body p-3">
         <div class="row mb-3">
             <div class="col-12 col-md-5 col-xl-4 col-xxl-3">
-                <div class="d-flex justify-content-between">
-                    <label>Chairman</label>
-                    <label class="fw-bold text-end">Joseph Bangayan</label>
+                <div class="d-flex justify-content-between" *ngFor="let scheduleItem of filterByCategory()">
+                    <label>{{scheduleItem.role}}</label>
+                    <label class="fw-bold text-end" *ngIf="scheduleItem.publisher">{{scheduleItem.publisher.fullName}}</label>
                 </div>
-                <div class="d-flex justify-content-between">
-                    <label>Opening Prayer</label>
-                    <label class="fw-bold text-end">Elvis Lorenzo</label>
-                </div>
-                <div class="d-flex justify-content-between">
-                    <label>Closing Prayer</label>
-                    <label class="fw-bold text-end">Niño Abarial</label>
-                </div>                
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-6 col-xl-3 p-2 mb-2">
-                <div class="bg-gray p-2 text-center text-white fw-bold d-flex align-items-center justify-content-center" style="height:44px">
+            <div class="col-12 col-md-6 col-xl-3 p-2 mb-2" *ngFor="let category of categoryArrangement">
+                <div *ngIf="category === midWeekCategories.TREASUREFROMGODSWORD" class="bg-gray p-2 text-center text-white fw-bold d-flex align-items-center justify-content-center" style="height:44px">
                     TREASURE FROM GOD'S WORD
                 </div>
-                <div class="p-1">
-                    <div class="d-flex justify-content-between border-bottom border-secondary py-2">
-                        <label>Instructional Talk</label>
-                        <label class="fw-bold text-end">Michael Gutierrez</label>
-                    </div>
-                    <div class="d-flex justify-content-between border-bottom border-secondary py-2">
-                        <label>Spiritual Gem</label>
-                        <label class="fw-bold text-end">Alexander Dela Vega</label>
-                    </div>
-                    <div class="d-flex justify-content-between border-bottom border-secondary py-2">
-                        <label>Bible Readng</label>
-                        <label class="fw-bold text-end">Paul Doldolea</label>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-xl-3 p-2 mb-2">
-                <div class="bg-yellow p-2 text-center text-white fw-bold d-flex align-items-center justify-content-center" style="height:44px">
+                <div *ngIf="category === midWeekCategories.APPLYYOURSELFTOTHEFIELDMINISTRY" class="bg-yellow p-2 text-center text-white fw-bold d-flex align-items-center justify-content-center" style="height:44px">
                     APPLY YOURSELF TO THE FIELD MINISTRY
                 </div>
-                <div class="p-1">
-                    <div class="d-flex justify-content-between border-bottom border-secondary pb-2">
-                        <label>Video Discussion</label>
-                        <label class="fw-bold text-end">Joseph Bangayan</label>
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center border-bottom border-secondary pb-2">
-                        <label>First Part</label>
-                        <div>
-                            <label class="fw-bold text-end">Cherry Bongat</label><br/>
-                            <label class="fw-bold text-end">Thelma Abrian</label>
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center border-bottom border-secondary pb-2">
-                        <label>Second Part</label>
-                        <div>
-                            <label class="fw-bold text-end">Jannylene Abarial</label><br/>
-                            <label class="fw-bold text-end">Odessa Villaceran</label>
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center border-bottom border-secondary pb-2">
-                        <label>Third Part</label>
-                        <div>
-                            <label class="fw-bold text-end">-</label>
-                        </div>
-                    </div>                                        
-                </div>  
-            </div>
-            <div class="col-12 col-md-6 col-xl-3 p-2 mb-2">
-                <div class="bg-red p-2 text-center text-white fw-bold d-flex align-items-center justify-content-center" style="height:44px">
+                <div *ngIf="category === midWeekCategories.LIVINGASACHRISTIAN" class="bg-red p-2 text-center text-white fw-bold d-flex align-items-center justify-content-center" style="height:44px">
                     LIVING AS CHRISTIANS
                 </div>
-                <div class="p-1">
-                    <div class="d-flex justify-content-between border-bottom border-secondary py-2">
-                        <label>First Part</label>
-                        <label class="fw-bold">Arnel Dela Cruz</label>
-                    </div>
-                    <div class="d-flex justify-content-between border-bottom border-secondary py-2">
-                        <label>Second Part</label>
-                        <label class="fw-bold text-end">-</label>
-                    </div>
-                    <div class="d-flex justify-content-between border-bottom border-secondary py-2">
-                        <label>CBS Conductor</label>
-                        <label class="fw-bold text-end">Marco Rafael</label>
-                    </div>
-                    <div class="d-flex justify-content-between border-bottom border-secondary py-2">
-                        <label>CBS Reader</label>
-                        <label class="fw-bold text-end">Alejandro Dela Vega</label>
-                    </div>
-                </div>                
-            </div>  
-            <div class="col-12 col-md-6 col-xl-3 p-2 mb-2">
-                <div class="bg-blue p-2 text-center text-white fw-bold d-flex align-items-center justify-content-center" style="height:44px">
+                <div *ngIf="category === midWeekCategories.ATTENDANTS" class="bg-blue p-2 text-center text-white fw-bold d-flex align-items-center justify-content-center" style="height:44px">
                     ATTENDANTS
                 </div>
                 <div class="p-1">
-                    <div class="d-flex justify-content-between align-items-center border-bottom border-secondary pb-2">
-                        <label>Audio/Video</label>
+                    <div class="d-flex justify-content-between align-items-center border-bottom border-secondary pb-2" *ngFor="let scheduleItem of filterByCategory(category)">
+                        <label>{{scheduleItem.role}}</label>
                         <div>
-                            <label class="fw-bold text-end">Cherry Bongat</label><br/>
-                            <label class="fw-bold text-end">Thelma Abrian</label>
+                            <p class="m-0 p-0 fw-bold text-end">{{scheduleItem.publisher ? scheduleItem.publisher.fullName : '-'}}</p>
+                            <p class="m-0 p-0 fw-bold text-end" *ngIf="scheduleItem.partnerPublisher">{{scheduleItem.partnerPublisher.fullName}}</p>
                         </div>
                     </div>
-                    <div class="d-flex justify-content-between align-items-center border-bottom border-secondary pb-2">
-                        <label>Zoom</label>
-                        <div>
-                            <label class="fw-bold text-end">Jannylene Abarial</label><br/>
-                            <label class="fw-bold text-end">Odessa Villaceran</label>
-                        </div>
-                    </div>
-                    <div class="d-flex justify-content-between align-items-center border-bottom border-secondary pb-2">
-                        <label>Mic Roving</label>
-                        <div>
-                            <label class="fw-bold text-end">Jannylene Abarial</label><br/>
-                            <label class="fw-bold text-end">Odessa Villaceran</label>
-                        </div>
-                    </div>                                        
-                </div>                 
+                </div>
             </div>
         </div>
     </div>
