--- a/JWDataTrackerWeb/src/app/pages/dashboard/dashboard.component.html
+++ b/JWDataTrackerWeb/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-xxl">
     <div class="row mt-2 mb-5">
         <div class="col-12 p-2 mb-2">
             <app-mid-week-schedule-panel></app-mid-week-schedule-panel>
