--- a/JWDataTrackerWeb/src/app/pages/mid-week-schedule/mid-week-schedule.component.html
+++ b/JWDataTrackerWeb/src/app/pages/mid-week-schedule/mid-week-schedule.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-bottom:6rem;">
+<div class="container-xxl" style="margin-bottom:6rem;">
     <div class="row">
         <div class="mt-3 col-12 d-flex align-items-center justify-content-between">
             <h3>Mid Week Meeting Schedules</h3>
