--- a/JWDataTrackerWeb/src/app/shared/components/add-edit-mid-week-schedule/add-edit-mid-week-schedule.component.html
+++ b/JWDataTrackerWeb/src/app/shared/components/add-edit-mid-week-schedule/add-edit-mid-week-schedule.component.html
@@ -1,4 +1,4 @@
-<div style="max-height:550px;overflow-y:auto;overflow-x:hidden;">
+<div style="max-height:600px;overflow-y:auto;overflow-x:hidden;">
     <div class="row px-3">
         <div class="col-12 d-flex flex-column justify-content-between align-items-center border-bottom border-secondary pb-3">
             <h3 class="m-0 p-2">Mid Week Schedule</h3>
@@ -13,7 +13,7 @@
     </div>
     
     <div class="row mt-2">
-        <div class="col-12 col-lg-8 col-xl-6 mb-2">
+        <div class="col-12 col-lg-6 mb-2">
             <div *ngIf="currentCategory === midWeekCategories.OPENING" class="bg-default p-2 text-center mb-2" style="font-weight:700">
                 <h3 class="p-0 m-0">Opening</h3>
             </div>
@@ -48,7 +48,7 @@
                         <button class="btn bg-red  text-white" (click)="clearValue(scheduleItem,'publisher');onModelChange(scheduleItem)">
                             <i class='bx bx-x' ></i>
                         </button>
-                        <button class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
+                        <button *ngIf="scheduleItem.publisher" class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>
                     </div>
@@ -65,7 +65,7 @@
                         <button class="btn bg-red text-white"  (click)="clearValue(scheduleItem,'publisher')">
                             <i class='bx bx-x' ></i>
                         </button>
-                        <button class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
+                        <button *ngIf="scheduleItem.publisher" class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>                    
                     </div>
@@ -85,7 +85,7 @@
                         <button class="btn bg-red  text-white"  (click)="clearValue(scheduleItem,'publisher');onModelChange(scheduleItem)">
                             <i class='bx bx-x' ></i>
                         </button> 
-                        <button class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
+                        <button *ngIf="scheduleItem.publisher" class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>                  
                     </div>
@@ -103,7 +103,7 @@
                         <button class="btn bg-red  text-white"  (click)="clearValue(scheduleItem,'partnerPublisher');onModelChange(scheduleItem,true)">
                             <i class='bx bx-x' ></i>
                         </button>
-                        <button class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.partnerPublisher.publisherId)">
+                        <button *ngIf="scheduleItem.partnerPublisher" class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.partnerPublisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>                        
                     </div>
@@ -123,7 +123,7 @@
                         <button class="btn bg-red  text-white" (click)="clearValue(scheduleItem,'publisher');onModelChangeForAttendant(scheduleItem)">
                             <i class='bx bx-x' ></i>
                         </button>
-                        <button class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
+                        <button *ngIf="scheduleItem.publisher" class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>  
                     </div>
@@ -141,7 +141,7 @@
                         <button class="btn bg-red text-white" (click)="clearValue(scheduleItem,'partnerPublisher');onModelChangeForAttendant(scheduleItem)">
                             <i class='bx bx-x' ></i>
                         </button>
-                        <button class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.partnerPublisher.publisherId)">
+                        <button  *ngIf="scheduleItem.partnerPublisher"  class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.partnerPublisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>  
                     </div>
@@ -158,7 +158,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-lg-4 col-xl-6 d-none d-md-block">
+        <div class="col-12 col-lg-6 d-none d-md-block">
             <div *ngIf="!selectedPublisher" class="bg-default p-2 text-center mb-2" style="font-weight:700">
                 <h3 class="p-0 m-0">Publisher Recent Parts</h3>
             </div>
@@ -177,36 +177,10 @@
             <div *ngIf="selectedPublisher" class="py-2" style="min-height:200px;">
                 <div class="row">
                     <div class="col-12">
-                        <kendo-grid [data]="selectedPublisher.recentParts">
-                            <kendo-grid-column field="date" title="Date Part" [width]="140">
-                                <ng-template kendoGridCellTemplate let-dataItem>
-                                    <span >{{ dataItem.date | date }}</span>
-                                </ng-template>
-                            </kendo-grid-column>
-                            <kendo-grid-column field="part.category" title="Category">
-                                <ng-template kendoGridCellTemplate let-dataItem>
-                                    <div *ngIf="dataItem.part.category === midWeekCategories.OPENING">
-                                        <span class="p-0 m-0">Opening</span>
-                                    </div>
-                                    <div *ngIf="dataItem.part.category === midWeekCategories.TREASUREFROMGODSWORD">
-                                        <span class="p-0 m-0">Treasure From God's Word</span>
-                                    </div>
-                                    <div *ngIf="dataItem.part.category === midWeekCategories.APPLYYOURSELFTOTHEFIELDMINISTRY">
-                                        <span class="p-0 m-0">Apply Yourself To The Field Ministry</span>
-                                    </div>
-                                    <div *ngIf="dataItem.part.category === midWeekCategories.LIVINGASACHRISTIAN">
-                                        <span class="p-0 m-0">Living as a Christian</span>
-                                    </div>
-                                    <div *ngIf="dataItem.part.category === midWeekCategories.ATTENDANTS">
-                                        <span class="p-0 m-0">Attendants</span>
-                                    </div>
-                                </ng-template>
-                            </kendo-grid-column>
-                            <kendo-grid-column field="part.role" title="Role"  [width]="130"> </kendo-grid-column>
-                        </kendo-grid>
+                        <app-grid [pageGrid]="publisherRecentPartPageGrid" [onLoadGrid]="loadDataGrid" [gridTitle]="'Publisher Recent Parts'" [inCardView]="false"></app-grid>
                     </div>
                 </div>
-            </div>
+            </div>            
         </div>            
     </div>
 </div>
