--- a/JWDataTrackerWeb/src/app/pages/dashboard/mid-week-schedule-panel/mid-week-schedule-panel.component.html
+++ b/JWDataTrackerWeb/src/app/pages/dashboard/mid-week-schedule-panel/mid-week-schedule-panel.component.html
@@ -1,4 +1,4 @@
-<div class="card m-1">
+<div class="card m-1" *ngIf="currentMidWeekSchedule">
     <div class="card-header">
         <div class="row">
             <div class="col-10">
