--- a/JWDataTrackerWeb/src/app/shared/components/add-edit-mid-week-schedule/add-edit-mid-week-schedule.component.html
+++ b/JWDataTrackerWeb/src/app/shared/components/add-edit-mid-week-schedule/add-edit-mid-week-schedule.component.html
@@ -1,5 +1,15 @@
 <div style="max-height:600px;overflow-y:auto;overflow-x:hidden;">
-    <div class="row px-3">
+    <div *ngIf="displayPartConfirmation" class="row d-flex justify-content-center align-items-center">
+        <div class="col-6">
+            <p class="p-0 m-0" [innerHTML]="confirmationMessage"></p>
+            <div class="d-flex justify-content-center mt-3" style="column-gap:10px;">
+                <button class="btn bg-red text-white" style="width:40%" (click)="displayPartConfirmation=false">Yes</button>
+                <button class="btn bg-green text-white" style="width:40%" (click)="clearValue(selectedSchedule,'publisher');onModelChange(selectedSchedule);displayPartConfirmation=false">No</button>
+            </div>
+        </div>
+    </div>
+
+    <div *ngIf="!displayPartConfirmation" class="row px-3">
         <div class="col-12 d-flex flex-column justify-content-between align-items-center border-bottom border-secondary pb-3">
             <h3 class="m-0 p-2">Mid Week Schedule</h3>
             <div class="col-12 col-md-2">
@@ -12,8 +22,8 @@
         </div>
     </div>
     
-    <div class="row mt-2">
-        <div class="col-12 col-lg-6 mb-2">
+    <div *ngIf="!displayPartConfirmation" class="row mt-2">
+        <div *ngIf="!displayRecentParts" class="col-12 col-lg-6 mb-2">
             <div *ngIf="currentCategory === midWeekCategories.OPENING" class="bg-default p-2 text-center mb-2" style="font-weight:700">
                 <h3 class="p-0 m-0">Opening</h3>
             </div>
@@ -48,7 +58,7 @@
                         <button class="btn bg-red  text-white" (click)="clearValue(scheduleItem,'publisher');onModelChange(scheduleItem)">
                             <i class='bx bx-x' ></i>
                         </button>
-                        <button *ngIf="scheduleItem.publisher" class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
+                        <button *ngIf="scheduleItem.publisher" class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>
                     </div>
@@ -65,7 +75,7 @@
                         <button class="btn bg-red text-white"  (click)="clearValue(scheduleItem,'publisher')">
                             <i class='bx bx-x' ></i>
                         </button>
-                        <button *ngIf="scheduleItem.publisher" class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
+                        <button *ngIf="scheduleItem.publisher" class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>                    
                     </div>
@@ -85,7 +95,7 @@
                         <button class="btn bg-red  text-white"  (click)="clearValue(scheduleItem,'publisher');onModelChange(scheduleItem)">
                             <i class='bx bx-x' ></i>
                         </button> 
-                        <button *ngIf="scheduleItem.publisher" class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
+                        <button *ngIf="scheduleItem.publisher" class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>                  
                     </div>
@@ -103,7 +113,7 @@
                         <button class="btn bg-red  text-white"  (click)="clearValue(scheduleItem,'partnerPublisher');onModelChange(scheduleItem,true)">
                             <i class='bx bx-x' ></i>
                         </button>
-                        <button *ngIf="scheduleItem.partnerPublisher" class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.partnerPublisher.publisherId)">
+                        <button *ngIf="scheduleItem.partnerPublisher" class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.partnerPublisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>                        
                     </div>
@@ -123,7 +133,7 @@
                         <button class="btn bg-red  text-white" (click)="clearValue(scheduleItem,'publisher');onModelChangeForAttendant(scheduleItem)">
                             <i class='bx bx-x' ></i>
                         </button>
-                        <button *ngIf="scheduleItem.publisher" class="d-none d-md-block btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
+                        <button *ngIf="scheduleItem.publisher" class="btn btn-default" (click)="loadPublisherRecentParts(scheduleItem.publisher.publisherId)">
                             <i class='bx bx-history'></i>
                         </button>  
                     </div>
@@ -181,6 +191,24 @@
                     </div>
                 </div>
             </div>            
+        </div>
+        <div *ngIf="displayRecentParts" class="col-12 d-block d-md-none">
+            <div *ngIf="selectedPublisher" class="bg-default p-2 mb-2 d-flex justify-content-between align-items-center" style="font-weight:700">
+                <div>
+                    <h3 class="p-0 m-0">{{selectedPublisher.fullName}}</h3>
+                    <label style="font-weight:400">Recent Parts</label>
+                </div>
+                <button class="btn bg-red text-white" (click)="displayRecentParts = !displayRecentParts">
+                    <i class='bx bx-arrow-back'></i>
+                </button>
+            </div>
+            <div *ngIf="selectedPublisher" class="py-2" style="min-height:200px;">
+                <div class="row">
+                    <div class="col-12">
+                        <app-grid [mobileViewComponent]="'PublisherRecentPartCardComponent'" [pageGrid]="publisherRecentPartPageGrid" [onLoadGrid]="loadDataGrid" [gridTitle]="'Publisher Recent Parts'" [inCardView]="false"></app-grid>
+                    </div>
+                </div>
+            </div>             
         </div>            
     </div>
 </div>
