--- a/JWDataTrackerWeb/src/app/pages/main-content/main-content.component.html
+++ b/JWDataTrackerWeb/src/app/pages/main-content/main-content.component.html
@@ -1,2 +1,24 @@
     <app-nav-menu></app-nav-menu>
-    <router-outlet></router-outlet>
+    <div style="margin-top:5rem;">
+        <div class="d-block" *ngIf="responsivehelper">
+            <div class="d-none d-sm-none d-md-none d-lg-none d-xl-none d-xxl-block">
+              XXL Screen
+            </div>
+            <div class="d-none d-sm-none d-md-none d-lg-none d-xl-block d-xxl-none">
+              XL Screen
+            </div>
+            <div class="d-none d-sm-none d-md-none d-lg-block d-xl-none d-xxl-none">
+              LG Screen
+            </div>
+            <div class="d-none d-sm-none d-md-block d-lg-none d-xl-none d-xxl-none">
+              MD Screen
+            </div>
+            <div class="d-none d-sm-block d-md-none d-lg-none d-xl-none d-xxl-none">
+              SM Screen
+            </div>
+            <div class="d-block d-sm-none d-md-none d-lg-none d-xl-none d-xxl-none">
+              XS Screen
+            </div>
+          </div>
+        <router-outlet></router-outlet>
+    </div>
